# blog

./: 2021-11-04-welcome-to-jekyll copy.md  404.html  500.html  Gemfile  _config.yml  index.html  index.md  pelicanconf.py  pyproject.toml  sitemap.xml
_gradappsadvise/: 2021-11-04-grad-apps.md
_posts/: 2021-11-04-welcome-to-jekyll.markdown
_sass/custom/: custom.scss
_site/: pelicanconf.py  publishconf.py
categories/: index.html
categories/none/: index.html
categories/random/: index.html
categories/research/: index.html
content/2023/: dspy-assertions-a-pr-reviews-pov.md  dspy-assertions-a-program-synthesis-perspective.md  hello-world.md  idempotence-and-recovery.md
content/pages/: 500.md
docs/: topics.md
docs/gradappsadvise/: AppMgmt.md  LoR.md  SoP.md  index.md
docs/research/: index.md  reading-papers.md  reading-writing-papers.md
drafts/dspy-assertions-a-program-synthesis-perspective/: index.html
feeds/: all.atom.xml  none.atom.xml  random.atom.xml  research.atom.xml
output/: 404.html  500.html  index.html
output/categories/: index.html
output/scrivings/: index.html
page/2/: index.html
plugins/twitter_card/: twitter_card.py
scrivings/: index.html
scrivings/dspy-assertions-a-pr-reviewers-pov/: index.html
scrivings/dspy-assertions-a-pr-reviews-pov/: index.html
scrivings/dspy-assertions-a-program-synthesis-perspective/: index.html
scrivings/dspy-assertions-a-program-synthesis-pov/: index.html
scrivings/hello-world/: index.html
scrivings/idempotence-and-recovery/: index.html
tags/: index.html
tags/assertions/: index.html
(+23 files in other folders)
